# VVPlayer

./: CMakeLists.txt  README.md  VVPlayer.cpp  VVPlayer.h  conanfile.py  main.cpp
.github/workflows/: cmake-single-platform.yml
components/WindowManager/: IWindowManager.h  WindowManager.cpp  WindowManager.h
libs/ThreadSafeQueue/: ThreadSafeQueue.h
